基本数据操作

--- a/templates/user_management_html/online_user.html
+++ b/templates/user_management_html/online_user.html
@@ -20,7 +20,7 @@
 
             </select>
 
-            <button type="submit" class="btn btn-info">点击执行</button>
+            <button type="submit" class="btn btn-mini btn-danger">强制下线</button>
             <a class="btn btn-xs btn-info" onclick="searchs();" title="检索" data-toggle="modal"
                data-target="#zhmyModal" style="width: 150px; height: 35px">
                 在线人数：
