--- a/static/mail/mail_modal.css
+++ b/static/mail/mail_modal.css
@@ -5,6 +5,43 @@
     right: 1px;
 }
 
-th {
+.pictures_content {
+    width: 690px;
+    height: 600px;
+}
+
+#checkbox_on {
+    height: 21px;
+    width: 21px;
+}
+
+.mail_list th {
     text-align: center;
+}
+
+.pictures tbody tr td {
+    line-height: 52px;
+}
+
+.pictures_body {
+    height: 420px;
+    margin: 5px 5px;
+    border: 1px dashed #1ebfae;
+}
+
+.border_body {
+    height: 100%;
+    margin: 5px 5px;
+}
+
+.btn_content {
+    position: absolute;
+    top: 250px;
+    left: 150px;
+}
+
+.btn_content button {
+    position: absolute;
+    bottom: 50px;
+    left: 85px;
 }
